# lesson34

./: env  manage.py  pyproject.toml
todolist/: settings.py
