[tool.poetry]
name = "lesson34"
version = "0.1.0"
description = ""
authors = ["timoshenko93 <lenincommunist194@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
